--- a/search_engine/templates/index.html
+++ b/search_engine/templates/index.html
@@ -1,64 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-{% extends 'base.html'  %}  
-{% block head  %} 
-   <title>Rocket Science : Image Search Engine</title>
-{% endblock %}
+  <meta charset="utf-8">
+  <title>Art Mixer: An artistic transformation</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&family=Permanent+Marker&family=Nothing+You+Could+Do&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">  <!-- CSS stylesheet -->
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="../static/style.css">
+
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/d39952044b.js" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </head>
+
 <body>
-{% block body  %} 
-	<div style="text-align:center;">
-		<div style="background-image: url('https://images.creativemarket.com/0.1.0/ps/5516004/2000/2000/m1/fpnw/wm0/painted-ground-.jpg?1544153362&s=0f194db666e61a393ea1e0e7946ab568');
-					font-family: roboto;
-					padding-top: 140px;
-					padding-bottom: 200px;">
-			<h1 style="font-size: 70px;
-					color: navy;">Art-Mixer</h1>		
-            
-        <div class="compare" style="margin: 100px;">
-        	<p style="color: navy; font-size: 25px;">Upload Your Content and Style Images!</p>
-        	<form action = "/success" method = "POST" enctype="multipart/form-data">  
-        		<select class="form-control" name="degree"
-	        						 style = "margin-top: 20px;
-	        						 		  margin-bottom: 30px;
-	        						 		  width: 200px; 
-					  			   			  height: 35px;
-												   text-align-last: center;">
-												   
-					<option value="full" selected>--Choose Mixing Degree--</option>
-					<option value="full" selected>Full</option>
-				    <option value="half">Half</option>
-				    <option value="minimum">Minimum</option>
-				</select>
-		        <input type="file" name="content_img" /
-		        		style = "width: 300px; 
-				  			   height: 35px; 
-				  			   font-size: 20px;
-				  			   border-radius: 5px;
-								 margin-left: 40px">   
-				<input type="file" name="style_img" /
-				style = "width: 300px; 
-							height: 35px; 
-							font-size: 20px;
-							border-radius: 5px;
-							margin-left: 40px">  
-		        <input type = "submit" value="Create Your Art!"
-		        		style = "width: 200px; 
-				  			   height: 35px; 
-				  			   text-align: center;
-				  			   font-size: 20px;
-				  			   color: white;
-				  			   background-color: #99d6ff;
-				  			   border-radius: 5px">  
-    		</form>
+
+  <!-- Nav Bar & title section-->
+  <section class="color-section" id="title">
+    <div class="container-fluid">
+
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="">Art Mixer</a>
+      </nav>
+
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h1 class="big-heading">Combine your favorite pictures!</h1>
+          <a href="#white" >
+          <button  type="button" class="btn btn-dark btn-lg download-button"><i class="fas fa-palette"></i> Demo</button>
+          </a>
+          <a href="#color2" >
+          <button  type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-angellist"></i> Create</button>
+          </a>
         </div>
-		</div>
-	</div>
 
-        
+        <div class="col-lg-6">
+          <img class="title-image1" src="https://coconuts.co/wp-content/uploads/2019/04/Photo-8-10-18-2-08-34-pm-960x540.jpg">
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+  <!-- Demo section-->
+  <section class="white-section" id="white">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover">
+      <div class="carousel-inner">
+        <div class="carousel-item active container-fluid">
+          <img src="Images/Demo1.png" class="demoimg">
+        </div>
+        <div class="carousel-item container-fluid">
+          <img src="Images/Demo2.png" class="demoimg">
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+  </section>
 
 
-{% endblock %}
+  <section class="color-section2" id="color2">
+    <div class="compare">
+      <form action="/success" method="POST" enctype="multipart/form-data">
+        <h2 class="step">Step1: Choose your mix degree</h2>
+        <select class="form-control chooseButtons" name="degree">
+
+          <option value="full" selected>--Choose Mixing Degree--</option>
+          <option value="full" selected>Full</option>
+          <option value="half">Half</option>
+          <option value="minimum">Minimum</option>
+        </select>
+        <h2 class="step">Step2: Upload your pictures</h2>
+        <div >
+          <input type="file" name="content_img" class="uploadButtons" >
+          <input type="file" name="style_img" class="uploadButtons">
+        </div>
+
+        <h2 class="step">Step3: Process your art</h2>
+        <input class="creatButton" type="submit" value="Create Your Art!" >
+      </form>
+    </div>
+  </section>
+
+
 </body>
+
 </html>
