--- a/database/templates/render.html
+++ b/database/templates/render.html
@@ -1,22 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Art Mixer: An artistic transformation</title>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&family=Permanent+Marker&family=Nothing+You+Could+Do&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">  <!-- CSS stylesheet -->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="../static/style.css">
+<head>
+  <meta charset="utf-8">
+  <title>Art Mixer: An artistic transformation</title>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&family=Permanent+Marker&family=Nothing+You+Could+Do&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet"> <!-- CSS stylesheet -->
 
-    <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/d39952044b.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="../../search_engine/static/style.css">
 
-  </head>
-  <body>
-    <img src="{{ url_for('static', filename='mixed_img.png') }}" alt="User Image">
-  </body>
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/d39952044b.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+  <!-- Nav Bar & title section-->
+  <section  id="title" class="color-section3">
+      <!-- Title -->
+    <div class="">
+      <h1 class="big-heading">Here is your mixed art!</h1>
+    </div>
+
+    <div class="">
+      <img src="{{ url_for('static', filename='mixed_img.png') }}" alt="User Image" class="renderImg">
+    </div>
+
+    <div class="" >
+      <a href="../../search_engine/templates/index.html"><button type="button" class="btn btn-primary btn-light btn-lg returnbutton" >Create another one</button>
+    </div>
+
+  </section>
+</body>
+
 </html>
