--- a/database/templates/render.html
+++ b/database/templates/render.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="" >
-      <a href="../../search_engine/templates/index.html"><button type="button" class="btn btn-primary btn-light btn-lg returnbutton" >Create another one</button>
+      <a href="http://art-mixer.herokuapp.com/"><button type="button" class="btn btn-primary btn-light btn-lg returnbutton" >Create another one</button>
     </div>
 
   </section>
